Added feedback for signing in and creating new acct -Christina

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="login">Login</string>
     <string name="register">Create New Account</string>
     <string name="firestore_button">Launch Firestore Activity</string>
+    <string name="login_successful">Sign-in Successful!</string>
+    <string name="new_acct_successful">Account Created Successfully!</string>
 </resources>
