--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="login">Login</string>
     <string name="register">Create New Account</string>
     <string name="firestore_button">Launch Firestore Activity</string>
+    <string name="logout_toolbar_button">Logout Button</string>
 
     <!--    Authentication Feedback     -->
     <string name="login_successful">Sign-in Successful!</string>
