--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,12 @@
     <string name="weight">Weight:</string>
     <string name="age">Age:</string>
     <string name="update_profile_button">Update Profile</string>
+    <string-array name="gender_array">
+        <item>Select one</item>
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
+    <string name="hint_lbs">lbs</string>
+    <string name="hint_years">Years</string>
 
 </resources>
