fixes for gamesAvailable -christina nguyen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,8 @@
     <string name="hint_lbs">lbs</string>
     <string name="hint_years">Years</string>
 
+    <!--    Games Available Acitivity   -->
+    <string name="games_avail_header">Select a game to play or learn more:</string>
+
 
 </resources>
