--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,9 @@
     <string name="register">Create New Account</string>
     <string name="firestore_button">Launch Firestore Activity</string>
     <string name="logout_toolbar_button">Logout Button</string>
-<!--    <string name="weightFireFilled"></string>-->
-<!--    <string name="ageFireFilled"></string>-->
-<!--    <string name="genderFireFilled"></string>-->
+    <string name="weightFireFilled"></string>
+    <string name="ageFireFilled"></string>
+    <string name="genderFireFilled"></string>
 
     <!--    Authentication Feedback     -->
     <string name="login_successful">Sign-in Successful!</string>
@@ -62,6 +62,11 @@
     <string name="save_game">Save Game</string>
     <string name="win_loss">Win/Lose:</string>
     <string name="global_games">Global Games</string>
+
+<!--    Completed Game Card-->
+    <string name="cg_nickname">Played by:</string>
+    <string name="cg_avg_bac">BAC:</string>
+    <string name="cg_result">Result:</string>
 
 
 </resources>
