Finished creating the location services for the app -- dani

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,11 +66,28 @@
     <string name="your_bac">Your BAC is:</string>
     <string name="global_games">Global Games</string>
 
-<!--    Completed Game Card-->
+    <!--    Completed Game Card-->
     <string name="cg_nickname">Played by:</string>
     <string name="cg_avg_bac">BAC:</string>
     <string name="cg_result">Result:</string>
     <string name="buzztender">BuzzTender</string>
+
+    <!--   Location  Activities-->
+    <string name="intro_label">Current location</string>
+    <string name="not_found">Your location could not be determined.</string>
+    <string name="permission_warning">This app requires permission to access your location in order to function correctly.</string>
+    <string name="lat_label">Latitude:</string>
+    <string name="long_label">Longitude:</string>
+    <string name="accuracy_label">Accuracy:</string>
+    <string name="na">N/A</string>
+    <string name="id_header">Id</string>
+    <string name="time_header">Timestamp</string>
+    <string name="lat_header">lat</string>
+    <string name="lon_header">lon</string>
+    <string name="acc_header">acc</string>
+    <string name="history_label">History</string>
+    <string name="record_button_text">Record Location</string>
+    <string name="title_activity_maps">MapsActivity</string>
 
 
 </resources>
